tests/errors/use_outside_scope.x
function my_scope
  x = 12
endfunction

z = x + 2